--- a/css/frnt.css
+++ b/css/frnt.css
@@ -174,3 +174,41 @@ background-color:#000000}
 background-color:#FFFFFF}
 
 }
+/* Player Stuff... */
+.btn-group-player,
+.btn-group-player button, 
+.btn-group-player div {
+	border: 0;
+
+}
+.btn-group-player .progress {
+	margin-top: 10px;
+	margin-left: 5px;
+	background: #fff;
+}
+.btn-group-player .btn-group-container {
+	background: #fff;
+	display: inline-block;
+	height: 32px;
+	padding: 0px 5px;
+}
+.group-element {
+	display: inline-block;
+	background: #fff;
+	height: 32px;
+	padding: 0px 5px;
+	float: left;
+}
+.time-info {
+	padding-top: 5px;
+}
+.group-element > .progress {
+	height: 10px;
+}
+.btn-group-player > .group-element:last-child {
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+}
+.slider-selection {
+	background: #5cb85c;
+}
