--- a/css/frnt.css
+++ b/css/frnt.css
@@ -207,11 +207,14 @@ background-color:#FFFFFF}
 	height: 10px;
 }
 .group-element > .slider {
-	margin-top: 4px;
+	margin-top: 7px;
 }
 .btn-group-player > .group-element:last-child {
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
+}
+#volumebar {
+	width: 140px;
 }
 .slider-selection {
 	background: #5cb85c;
