remove button added (NYI)

--- a/templates/playlist.hbs
+++ b/templates/playlist.hbs
@@ -24,6 +24,9 @@
 			<button type="button" class="btn btn-default btn-sm">
 				<span class="glyphicon glyphicon-info-sign"></span>
 			</button>
+			<button type="button" class="btn btn-default btn-sm">
+				<span class="glyphicon glyphicon-remove"></span>
+			</button>
 		</td>
 	</tr>
 	{{/each}}
