Attribution for new Icons...

--- a/templates/settings.hbs
+++ b/templates/settings.hbs
@@ -3,4 +3,4 @@
 
 <h1>About</h1>
 <p>Version: {{VERSION}}</p>
-<p>This webapplication uses <a href="http://getbootstrap.com">Bootstrap</a> and Icons from <a href="http://icons8.com/">Icons8</a>.</p>
+<p>This webapplication uses <a href="http://getbootstrap.com">Bootstrap</a> and other Icons from <a href="http://ionicons.com/">Ionicons</a>.</p>
