--- a/css/frnt.css
+++ b/css/frnt.css
@@ -252,3 +252,7 @@ background-color:#FFFFFF}
 	height: 100px;
 	border: 1px solid #ccc;
 }
+.directory-item {
+	height: 210px;
+	overflow: hidden;
+}
